--- a/_posts/2018-09-02-practice.md
+++ b/_posts/2018-09-02-practice.md
@@ -9,3 +9,7 @@ image: "/images/pic02.jpg"
 ## 타이틀
 
 [링크](https://lovit.github.io)
+
+{% highlight python %}
+from sklearn.mina import iloveyou
+{% endhighlight %}
